<resources>
    <string name="app_name">Gapakelama</string>
    <string name="title_activity_signup">Sign up</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="password">Password</string>
    <string name="gapakelama">Gapakelama</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="create_one_now">Create one now</string>
    <string name="email">Email</string>
    <string name="todo">TODO</string>
    <string name="sign_up">Sign up</string>
</resources>